--- a/About.html
+++ b/About.html
@@ -93,7 +93,20 @@
   </header>
   <!-- End header -->
 
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
   <!-- Start About -->
   <div class="aboutUs">
     <div class="col-12">
@@ -269,7 +282,7 @@
     </div>
   </div>
   </div>
-
+</div>
   </div>
   <!--Start Footer-->
   <footer class="footer background">
