--- a/Blog.html
+++ b/Blog.html
@@ -97,8 +97,21 @@
     </nav>
   </header>
   <!-- End header -->
-  
-    <!-- Start blog -->
+  <!--tuyet-->
+  <div class="snowflakes" aria-hidden="true">
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+  <!-- Start blog -->
     <div class="blog-box">
         <div class="container">
             <div class="row">
@@ -245,7 +258,7 @@
     </div>
   </div>
   </div>
-
+</div>
   </div>
     <!--Start Footer-->
     <footer class="footer background">
