--- a/bread.html
+++ b/bread.html
@@ -94,7 +94,20 @@
     </nav>
   </header>
   <!-- End header -->
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
 
   <br><br><br>
   <div class="footerlete backgroundlete">
@@ -322,7 +335,7 @@
     </div>
   </div>
   </div>
-
+</div>
   </div>
   <!--Start Footer-->
   <footer class="footer background">
