--- a/details/PepSi.html
+++ b/details/PepSi.html
@@ -100,7 +100,20 @@
     </nav>
   </header>
   <!-- End header -->
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
   <br><br>
   <div class="footerlete backgroundlete">
     <!-- Start menu -->
@@ -254,7 +267,7 @@
     </div>
   </div>
   </div>
-
+</div>
   <!--Start Footer-->
   <footer class="footer background">
     <div class="container">
