--- a/details/Street Bread.html
+++ b/details/Street Bread.html
@@ -151,7 +151,20 @@
   </div>
   </div>
   <!-- End menu -->
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
   <div class="Product">
     <div class="card-wrapper">
       <div class="card">
@@ -260,7 +273,7 @@
     </div>
   </div>
   </div>
-
+</div>
   <!--Start Footer-->
   <footer class="footer background">
     <div class="container">
