--- a/index.html
+++ b/index.html
@@ -94,7 +94,24 @@
     </nav>
   </header>
   <!-- End header -->
-
+  <!--tuyet roi-->
+  <div class="snowflakes" aria-hidden="true">
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❅</div>
   <!-- Start slide -->
   <div id="Slider" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
@@ -353,6 +370,7 @@
         </div>
       </div>
   </footer>
+</div>
   <!-- End Footer -->
 
 
