--- a/pizza.html
+++ b/pizza.html
@@ -96,7 +96,20 @@
   <!-- End header -->
 
   <br><br><br>
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
   <!-- Start menu -->
   <div class="footerlete backgroundlete">
     <div class="section-categories pt-5 pb-5">
@@ -324,7 +337,7 @@
       </div>
     </div>
   </div>
-
+</div>
   </div>
   <!--Start Footer-->
   <footer class="footer background">
