--- a/ContactUs.html
+++ b/ContactUs.html
@@ -97,7 +97,20 @@
         </nav>
     </header>
     <!-- End header -->
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
     <!--Start Form Contac Us -->
     <div class="contact-us">
         <div class="container pt-4 pb-4">
@@ -183,7 +196,7 @@
     </div>
   </div>
   </div>
-
+</div>
   </div>
     <!--Start Footer-->
     <footer class="footer background">
