--- a/blog-details4.html
+++ b/blog-details4.html
@@ -96,7 +96,20 @@
   </header>
   <!-- End header -->
 
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
   <!-- Start About -->
   <div class="aboutUs">
     <div class="col-12">
@@ -172,7 +185,7 @@
     </div>
   </div>
   </div>
-
+</div>
   </div>
   <!--Start Footer-->
   <footer class="footer background">
