--- a/blog-details5.html
+++ b/blog-details5.html
@@ -95,7 +95,20 @@
     </nav>
   </header>
   <!-- End header -->
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
 
   <!-- Start About -->
   <div class="aboutUs">
@@ -186,7 +199,7 @@
     </div>
   </div>
   </div>
-
+</div>
   </div>
   <!--Start Footer-->
   <footer class="footer background">
