--- a/details/C2 Tea.html
+++ b/details/C2 Tea.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body>
+<>
   <!-- Start header -->
 
   <header class="top-navbar">
@@ -97,7 +97,20 @@
     </nav>
   </header>
   <!-- End header -->
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
   <br><br>
   <div class="footerlete backgroundlete">
     <!-- Start menu -->
@@ -257,7 +270,7 @@
   </div>
 </div>
 </div>
-
+</div>
   <!--Start Footer-->
   <footer class="footer background">
     <div class="container">
