--- a/menu.html
+++ b/menu.html
@@ -94,7 +94,20 @@
     </nav>
   </header>
   <!-- End header -->
-
+<!--tuyet-->
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
+  <div class="snowflake">❅</div>
+  <div class="snowflake">❆</div>
   <br><br>
   <div class="footerlete backgroundlete">
     <!-- Start menu -->
@@ -721,7 +734,7 @@
     </div>
   </div>
   </div>
-
+</div>
   </div>
   <!--Start Footer-->
   <footer class="footer background">
