--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="aj/angular.min.js"></script>
 
   
-
+<meta name="google-site-verification" content="u1auZkILT2Jha4KBXhCaQrlBl8ELdUAUxSffBOiyAUo" />
 </head>
 
 <body>
